Closed
Bug 537018
Opened 16 years ago
Closed 14 years ago
crash [@ nsMsgFilterAfterTheFact::ContinueExecutionPrompt()]
Categories
(MailNews Core :: Filters, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 5.0b1
People
(Reporter: wsmwk, Assigned: timeless)
Details
(Keywords: crash)
Crash Data
Attachments
(2 files, 1 obsolete file)
|
759 bytes,
patch
|
Bienvenu
:
review+
|
Details | Diff | Splinter Review |
|
2.63 KB,
patch
|
Bienvenu
:
review+
|
Details | Diff | Splinter Review |
crash [@ nsMsgFilterAfterTheFact::ContinueExecutionPrompt()]
a mere 1 crash/week
bp-48f2036d-6a81-420c-b64d-3c6242091221
0 thunderbird.exe nsMsgFilterAfterTheFact::ContinueExecutionPrompt mailnews/base/search/src/nsMsgFilterService.cpp:1079
1 thunderbird.exe nsMsgFilterAfterTheFact::OnStopRunningUrl mailnews/base/search/src/nsMsgFilterService.cpp:415
2 thunderbird.exe nsMsgLocalMailFolder::OnStopRunningUrl mailnews/local/src/nsLocalMailFolder.cpp:3449
3 thunderbird.exe nsMsgMailNewsUrl::SetUrlState mailnews/base/util/nsMsgMailNewsUrl.cpp:135
4 thunderbird.exe nsMsgProtocol::OnStopRequest mailnews/base/util/nsMsgProtocol.cpp:406
5 thunderbird.exe nsMailboxProtocol::OnStopRequest mailnews/local/src/nsMailboxProtocol.cpp:380
6 thunderbird.exe nsInputStreamPump::OnStateStop netwerk/base/src/nsInputStreamPump.cpp:576
7 thunderbird.exe nsInputStreamPump::OnInputStreamReady netwerk/base/src/nsInputStreamPump.cpp:401
| Reporter | ||
Comment 1•14 years ago
|
||
bp-75b2161c-6938-4a53-a268-1067e2110312
EXCEPTION_ACCESS_VIOLATION_READ
0x0
0 thunderbird.exe nsMsgFilterAfterTheFact::ContinueExecutionPrompt mailnews/base/search/src/nsMsgFilterService.cpp:1079
1 thunderbird.exe nsMsgFilterAfterTheFact::OnStopRunningUrl mailnews/base/search/src/nsMsgFilterService.cpp:416
2 thunderbird.exe nsMsgLocalMailFolder::OnStopRunningUrl mailnews/local/src/nsLocalMailFolder.cpp:3489
3 thunderbird.exe nsMsgMailNewsUrl::SetUrlState mailnews/base/util/nsMsgMailNewsUrl.cpp:136
4 thunderbird.exe nsMsgProtocol::OnStopRequest mailnews/base/util/nsMsgProtocol.cpp:406
5 thunderbird.exe nsMailboxProtocol::OnStopRequest mailnews/local/src/nsMailboxProtocol.cpp:381
6 thunderbird.exe nsInputStreamPump::OnStateStop netwerk/base/src/nsInputStreamPump.cpp:578
7 thunderbird.exe nsInputStreamPump::OnInputStreamReady netwerk/base/src/nsInputStreamPump.cpp:403
OS: Windows XP → All
Attachment #519733 -
Flags: review?(bienvenu)
so, the problem here is that someone tries to stop while the last filter is basically done for a folder.
there would be a prompt if there was another filter asking the user if the user wants to advance to the next folder or something.
this patch just causes things to stop (i think).
i don't really care and will not be trying to figure out the logic beyond this, so if people don't like my patches, they'll have to write their own. best wishes.
Comment 4•14 years ago
|
||
Comment on attachment 519734 [details] [diff] [review]
[checked in] fix crash
this should fix the crash (or kick it down the road). I can't see how multiple folder filter execution works (either from the UI, or in the backend), so I think this generally only would advance to the next filter.
Attachment #519734 -
Flags: review?(bienvenu) → review+
Keywords: checkin-needed
Updated•14 years ago
|
Attachment #519733 -
Attachment description: cleanup → cleanup - doesn't contain crash fix...
Comment 5•14 years ago
|
||
Comment on attachment 519734 [details] [diff] [review]
[checked in] fix crash
Checked in: http://hg.mozilla.org/comm-central/rev/08b318fb1ec1
Attachment #519734 -
Attachment description: fix crash → [checked in] fix crash
Updated•14 years ago
|
Keywords: checkin-needed
Target Milestone: --- → Thunderbird 3.3a4
Updated•14 years ago
|
Crash Signature: [@ nsMsgFilterAfterTheFact::ContinueExecutionPrompt()]
| Reporter | ||
Comment 6•14 years ago
|
||
timeless, thanks for the initial patch!
and bienvenu for the adaptation.
an examination of crash stats shows this crash is gone as of v5.
It's hard to tell if there is any fallout (new crashes) in v5 related to this patach. But we no longer need timeless' initial patch, correct?
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Comment 7•14 years ago
|
||
Comment on attachment 519733 [details] [diff] [review]
cleanup - doesn't contain crash fix...
this doesn't apply against the trunk. Essentially, all this patch does is convert to early returns. It doesn't fix any issues but I'll try to get a patch that builds against the trunk and land it...
Comment 8•14 years ago
|
||
Attachment #519733 -
Attachment is obsolete: true
Attachment #556150 -
Flags: review+
Attachment #519733 -
Flags: review?(dbienvenu)
You need to log in
before you can comment on or make changes to this bug.
Description
•