Bug 537018 crash [@ nsMsgFilterAfterTheFact::ContinueExecutionPrompt()] r=bienvenu